screen contrast fix

--- a/BlazorApp1/Components/MovieDetails.razor.css
+++ b/BlazorApp1/Components/MovieDetails.razor.css
@@ -1,12 +1,8 @@
 ﻿.component {
     height: 100%;
     width: 100%;
-/*    background-size: cover;*/
     position: relative;
-/*    background-position-y -64px;*/
     overflow: hidden;
-/*    opacity: 0;*/
-
 }
 
 .component_backdrop {
@@ -21,7 +17,7 @@
 
 .component_content {
     background: rgb(0,0,0);
-    background: linear-gradient(0deg, rgba(0,0,0,1) 9%, rgba(0,0,0,0.55) 100%);
+    background: linear-gradient(0deg, rgba(0,0,0,1) 12%, rgba(0,0,0,0.55) 100%);
     height: 100%;
     width: 100%;
     position: absolute;
@@ -43,6 +39,6 @@
 }
 
 .component_content_card {
-    background: #000000d1;
+    background: rgb(0 0 0 / 33%);
     flex: 1;
 }
