--- a/BlazorApp1/Components/PopUp.razor.css
+++ b/BlazorApp1/Components/PopUp.razor.css
@@ -3,7 +3,7 @@
     z-index: 10;
     height: 100vh;
     width: calc(100% - 250px);
-    background: #000000e3;
+    background: rgb(0 0 0 / 75%);
     justify-content: center;
     align-items: center;
     display: flex;
